--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ code {
   font-size: 32px;
   font-weight: normal;
 }
-.list button{
+.list button {
   background-color: black;
   color: white;
   font-size: 18px;
@@ -75,3 +75,60 @@ code {
     transform: translateY(0);
   }
 }
+
+.details {
+  background-color: #f5f5f5;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
+
+.detailsCap {
+  width: 80%;
+  height: 500px;
+  padding: 2em;
+  background-color: white;
+  border-radius: 1em;
+  margin: auto;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 2em;
+}
+.detailsImage {
+  width: 20%;
+  height: 100%;
+}
+.detailsImage img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.detailsText {
+  width: 80%;
+}
+
+.detailsText .name {
+  text-transform: capitalize;
+  margin-bottom: 0px;
+  font-size: 32px;
+  font-weight: normal;
+}
+
+.detailsText p {
+  text-transform: capitalize;
+  margin-bottom: 0px;
+  font-size: 17px;
+  font-weight: normal;
+  margin-bottom: 1em;
+}
+.details h2{
+  margin-bottom: 0;
+}
+
+.imageList img:hover{
+    animation: bounce 0.5s linear;
+    cursor: pointer;
+}
+
